--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div id="lightningout"></div>
 
-    <script src="<My Domain URL>/lightning/lightning.out.js"></script>
+    <script src="https://kolkata-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
     <script>
       $Lightning.use(
         'c:LightningOutDependencyApp', // name of the Lightning app
@@ -23,7 +23,7 @@
             }
           );
         },
-        '<Experience Site URL>' // Site endpoint
+        'https://kolkata-dev-ed.my.site.com/dreamforce' // Site endpoint
       );
     </script>
   </body>
