--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <div id="lightningout"></div>
 
-    <script src="https://kolkata-dev-ed.my.salesforce.com/lightning/lightning.out.js"></script>
+    <script src="	https://kolkata-dev-ed.my.site.com/dreamforce/lightning/lightning.out.js"></script>
     <script>
       $Lightning.use(
         'c:LightningOutDependencyApp', // name of the Lightning app
