--- a/einstein.html
+++ b/einstein.html
@@ -1,30 +1,44 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-  </head>
-  <body>
+<html>
 
-    <div id="lightningout"></div>
+<style>
 
-    <script src="https://kolkata-dev-ed.my.site.com/dreamforce/lightning/lightning.out.js"></script>
-    <script>
-      $Lightning.use(
-        'c:LightningOutDependencyApp', // name of the Lightning app
-        function () {
-          // Callback once framework and app loaded
-          $Lightning.createComponent(
-            'c:HelloWorld', // top-level component of your app
-            {}, // attributes to set on the component when created
-            'lightningout', // the DOM location to insert the component
-            function (cmp) {
-              // callback when component is created and active on the page
-            }
-          );
-        },
-        'https://kolkata-dev-ed.my.site.com/dreamforce' // Site endpoint
-      );
-    </script>
-  </body>
+  a {
+    color: orange;
+  }
+
+</style>
+
+<script src="https://demobluecanvas1-developer-edition.na162.force.com/lightning/lightning.out.js"></script>
+
+<div data-lightning-out="true"></div>
+
+  <script>
+
+    const appName = 'c:OptOutFormWrapper';
+    const componentName = 'c:optoutForm';
+    const lightningEndpoint = '	https://sfpd2-dev-ed.my.site.com/einstein';
+    const targetElement = document.querySelector("[data-lightning-out]");
+    const componentAttributes = {
+
+    };
+
+    $Lightning.use(
+            appName,
+            function (){
+              $Lightning.createComponent(
+                      componentName,
+                      componentAttributes,
+                      targetElement,
+                      function (cmp){
+                        console.log('lightning component created');
+                      }
+              );
+            },
+            lightningEndpoint
+    );
+
+
+  </script>
+
+
 </html>
