--- a/einstein.html
+++ b/einstein.html
@@ -8,7 +8,7 @@
 
 </style>
 
-<script src="https://demobluecanvas1-developer-edition.na162.force.com/lightning/lightning.out.js"></script>
+<script src="https://sfpd2-dev-ed.my.site.com/einstein/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
@@ -16,7 +16,7 @@
 
     const appName = 'c:OptOutFormWrapper';
     const componentName = 'c:optoutForm';
-    const lightningEndpoint = '	https://sfpd2-dev-ed.my.site.com/einstein';
+    const lightningEndpoint = 'https://sfpd2-dev-ed.my.site.com/einstein';
     const targetElement = document.querySelector("[data-lightning-out]");
     const componentAttributes = {
 
