--- a/einstein.html
+++ b/einstein.html
@@ -8,7 +8,7 @@
 
 </style>
 
-<script src="https://sfpd2-dev-ed.my.site.com/einstein/lightning/lightning.out.js"></script>
+<script src="https://sfpd2-dev-ed.my.site.com/lightning/lightning.out.js"></script>
 
 <div data-lightning-out="true"></div>
 
